--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "express": "^4.19.2",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1"
   }
